# unsocial-network

./: .gitignore  Dockerfile  README.md  analytics.py  app.py  connect.yaml  docker-compose.yml  pyproject.toml
assets/: monolithprogress.drawio
clickhouse-config/: init-db.sql  init-script.sh  kafka.xml  network.xml  sample-queries.sql
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/src/: App.css  App.js  VideoFeed.css  VideoFeed.jsx  VideoPlayer.js
frontend/src/components/: Notification.css  Notification.js  RecordingStatus.css  RecordingStatus.js  ShortcutsHelper.css  ShortcutsHelper.js
frontend/src/hooks/: useDomRecording.js  useKeyboardRecording.js
